Native/Test/KL/cast-struct-to-boolean.out
cast-struct-to-boolean.kl:11:10: error: no cast exists from Vec3 to Boolean
